Revert "trying to fix navbar collapsing"
This reverts commit cc913f432adf75f9d1deaf5481ef3c967be71dfe.

--- a/css/custom.css
+++ b/css/custom.css
@@ -66,19 +66,3 @@
 .comment-box {
     text-align: center;
 }
-
-.navbar-collapse.collapse {
-  display: block!important;
-}
-
-.navbar-nav>li, .navbar-nav {
-  float: left !important;
-}
-
-.navbar-nav.navbar-right:last-child {
-  margin-right: -15px !important;
-}
-
-.navbar-right {
-  float: right!important;
-}
